force-app/main/default/objects/Lead/fields/Company_Size_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Bucket__c</fullName>
    <label>Company Size Bucket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>