force-app/main/default/objects/Lead/fields/Is_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Is_Enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enriched</label>
    <type>Checkbox</type>
</CustomField>