force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>(IF(CONTAINS(UPPER(Title), &quot;VP&quot;), 30,
  IF(CONTAINS(UPPER(Title), &quot;DIRECTOR&quot;), 25,
    IF(CONTAINS(UPPER(Title), &quot;MANAGER&quot;), 15, 0)))
) +
(IF(ISPICKVAL(Industry, &quot;Technology&quot;), 25,
  IF(ISPICKVAL(Industry, &quot;Manufacturing&quot;), 20,
    IF(ISPICKVAL(Industry, &quot;Financial Services&quot;), 20, 5)))
) +
(IF(NOT(ISBLANK(Phone)), 10, 0)) +
(IF(NOT(ISBLANK(Company)), 10, 0)) +
(IF(ISPICKVAL(LeadSource, &quot;Web&quot;), 15,
  IF(ISPICKVAL(LeadSource, &quot;Partner Referral&quot;), 15, 0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>