force-app/main/default/objects/Lead/fields/Lead_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Tier__c</fullName>
    <formula>IF(Lead_Score__c &gt;= 70, &quot;Hot&quot;,
  IF(Lead_Score__c &gt;= 40, &quot;Warm&quot;, &quot;Cold&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Tier</label>
    <type>Text</type>
</CustomField>